--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NANO_NODE_URL=http://qlc_node:29735
-NANO_WORK_NODE_URL=http://qlc_node:29735
+QLC_NODE_URL=http://qlc_node:29735
+QLC_WORK_NODE_URL=http://qlc_node:29735
 
 USE_REDIS=1
 REDIS_HOST=redis
