--- a/docker/docker-compose/docker-compose.yml
+++ b/docker/docker-compose/docker-compose.yml
@@ -61,6 +61,9 @@ services:
       - type: bind
         source: ./wallet-server/.env
         target: /app/config/.env
+      - type: bind
+        source: ./wallet-server/logs
+        target: /var/log/wallet-server/
     depends_on: 
         - postgresql
         - redis
