--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "qlcwallet-server",
   "version": "1.0.0",
-  "description": "QLCChain Wwallet server",
+  "description": "QLCChain Wallet server",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "babel-node index.js --presets es2015",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "QLCChain Authors",
@@ -19,10 +19,16 @@
     "redis": "^2.8.0",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
-    "uws": "^10.148.1"
+    "uws": "^10.148.1",
+    "winston": "^3.0.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/qlcchain/qlcwallet-server.git"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-preset-es2015": "^6.22.0",
+    "nodemon": "^1.11.0"
   }
 }
