- update gitignore - add VSCode debug setting - optimize docker and docker-compose - add more debug log - TODO: log all http request/response

--- a/docker/docker-compose/docker-compose.yml
+++ b/docker/docker-compose/docker-compose.yml
@@ -63,7 +63,7 @@ services:
         target: /app/config/.env
       - type: bind
         source: ./wallet-server/logs
-        target: /var/log/wallet-server/
+        target: /var/log/wallet-server
     depends_on: 
         - postgresql
         - redis
