--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "qlcwallet-server",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "QLCChain Wallet server",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js --exec babel-node --presets es2015,stage-2",
+    "build": "babel . -d dist",
     "start": "babel-node index.js --presets es2015",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "node dist/index.js",
+    "test": "mocha --compilers js:babel-register"
   },
   "author": "QLCChain Authors",
   "license": "MIT",
@@ -15,12 +18,27 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "knex": "^0.15.1",
+    "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "redis": "^2.8.0",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
     "uws": "^10.148.1",
     "winston": "^3.0.0"
+  },
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 7,
+      "sourceType": "module"
+    },
+    "env": {
+      "node": true
+    },
+    "rules": {
+      "no-console": 0,
+      "no-unused-vars": 1
+    }
   },
   "repository": {
     "type": "git",
@@ -29,6 +47,15 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^5.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.11.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "sourceMaps": true
   }
 }
