--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,14 +9,14 @@ WORKDIR /app
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY package*.json /app
+COPY package*.json /app/
 
 # If you are building your code for production
 # RUN npm install --only=production
 RUN npm install --only=production
 
 # Bundle app source
-COPY ./ /app
+COPY ./ /app/
 
 VOLUME [ "/app/config","/var/log/wallet-server" ]
 
