--- a/docker/docker-compose/docker-compose.yml
+++ b/docker/docker-compose/docker-compose.yml
@@ -53,7 +53,6 @@ services:
     ports:
       - "8888:8888"
       - "3000:3000"
-      - "127.0.0.1:8889:8889"
     networks:
       - qlcwallet
       - traefik
@@ -73,7 +72,7 @@ services:
       - "traefik.enable=true"
       - "traefik.backend=qlc_wallet_server"
       - "traefik.first.port=8888"
-      - "traefik.first.frontend.rule=Host:wallet.qlcchain.online"  
+      - "traefik.first.frontend.rule=Host:api.qlcchain.online"  
       - "traefik.second.port=3000"
       - "traefik.second.frontend.rule=Host:ws.qlcchain.online" 
       - "traefik.docker.network=traefik"
